# searchText

./: CMakeLists.txt  README.md  searchText.pro
src/: DownloadManager.cpp  DownloadManager.cpp.autosave  DownloadManager.h  DownloadManager.h.autosave  SearchEngine.cpp  SearchEngine.h  crew.c
src/commands/: Command.h  PauseCommand.h  ResumeCommand.h  StartCommand.h  StopCommand.h
src/page/: Page.cpp  Page.h
src/wrappers/: Link.cpp  Link.h
test/: DownloadManagerTest.cpp
